# KParser

./: CMakeLists.txt  README.md  build.bat  build.sh
example/: CMakeLists.txt  main.cpp
src/: CMakeLists.txt  KParser.cpp  KParser.h
src/detail/: KParser.cpp  any.h  common.h  conf.h  doc.cpp  doc.h  dsl.cpp  dsl.h  error.cpp  error.h  impl.cpp  impl.h  ref.h  rule.cpp  rule.h  text.h  util.cpp  util.h
src/impl/: KParser.cpp  any.h  base.h  common.h  conf.h  doc.cpp  doc.h  dsl.cpp  dsl.h  ebnf.cpp  ebnf.h  error.cpp  error.h  impl.cpp  impl.h  prop_tree.h  ptree.cpp  ptree.h  ref.h  rule.cpp  rule.h  terminal.h  text.cpp  text.h  util.cpp  util.h
src/impl/text/: text.h
src/impl/text/impl/: data.h  text.cpp
test/: CMakeLists.txt  TestAny.cpp  TestDSL.cpp  TestDoc.cpp  TestParse.cpp  TestPtree.cpp  TestRef.cpp  TestShare.cpp  TestText.cpp  TestTmp.cpp  TestUtil.cpp  conf.h
